RESOLVED FIXED 255096
[GStreamer][WebRTC] TWCC extension not listed in SDP generated descriptions
https://bugs.webkit.org/show_bug.cgi?id=255096
Summary [GStreamer][WebRTC] TWCC extension not listed in SDP generated descriptions
Philippe Normand
Reported 2023-04-06 09:16:39 PDT
.
Attachments
Philippe Normand
Comment 1 2023-04-06 09:19:53 PDT
EWS
Comment 2 2023-04-11 07:07:28 PDT
Committed 262823@main (ed2dd60966ef): <https://commits.webkit.org/262823@main> Reviewed commits have been landed. Closing PR #12461 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-04-11 07:08:30 PDT
Note You need to log in before you can comment on or make changes to this bug.