[GStreamer][WebRTC] TWCC extension not listed in SDP generated descriptions https://bugs.webkit.org/show_bug.cgi?id=255096

Reviewed by Xabier Rodriguez-Calvar.

The `extmap-` attributes we generated started at 0 but this is not allowed by the RFC 5285.

* Source/WebCore/Modules/mediastream/gstreamer/GStreamerWebRTCUtils.cpp:
(WebCore::capsFromRtpCapabilities):

Canonical link: https://commits.webkit.org/262823@main